HTMLFormElement.elements doesn't include fieldsets https://bugs.webkit.org/show_bug.cgi?id=48193

Reviewed by Darin Adler.

WebCore:

Add fieldset and keygen to the list of form collection elements, by making them enumeratable.
This patch does not add object element to the list. A separate bug will do that.

Test: fast/forms/form-collection-elements.html

* html/HTMLFieldSetElement.h:
(WebCore::HTMLFieldSetElement::isEnumeratable):
* html/HTMLKeygenElement.h:
(WebCore::HTMLKeygenElement::isEnumeratable):

LayoutTests:

* fast/forms/form-collection-elements-expected.txt: Added.
* fast/forms/form-collection-elements.html: Added.
* fast/forms/script-tests/form-collection-elements.js: Added.



Canonical link: https://commits.webkit.org/63294@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@72835 268f45cc-cd09-0410-ab3c-d52691b4dbfc