WebCore/html/HTMLFieldSetElement.h
@@ -35,6 +35,7 @@ public:
 private:
     HTMLFieldSetElement(const QualifiedName&, Document*, HTMLFormElement*);
 
+    virtual bool isEnumeratable() const { return true; }
     virtual bool supportsFocus() const;
     virtual RenderObject* createRenderer(RenderArena*, RenderStyle*);
     virtual const AtomicString& formControlType() const;
