WebCore/html/HTMLKeygenElement.h
@@ -36,7 +36,6 @@ private:
     HTMLKeygenElement(const QualifiedName&, Document*, HTMLFormElement*);
 
     virtual const AtomicString& formControlType() const;
-    virtual bool isEnumeratable() const { return false; }
     virtual void parseMappedAttribute(Attribute*);
     virtual bool appendFormData(FormDataList&, bool);
 
